# gen-ai-playground

./: SentenceSimilarity.txt  pyproject.toml
MiniLM/: Sentence-Transformers.py
inference-server/: triton.txt
langchain/: agent.py  chat_model.py  llm_predict.py  main.py  memory.py  multi-steps.py  prompt.py  templates.py
research/: PR-000.txt
